--- a/node-exercise-3-database/package.json
+++ b/node-exercise-3-database/package.json
@@ -11,10 +11,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
-    "mongoose": "^8.13.1",
-    "validator": "^13.15.0"
+    "mongoose": "^8.13.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
